# projeto_api_dados_abertos_camara

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
docs/: architecture.md  dashboard.md  data_contracts.md  data_quality.md  dax_measures.md  execution_guide.md  lineage.md  ml_nlp.md  project_evolution.md  star_schema.md
refatorado.egg-info/: PKG-INFO  SOURCES.txt
src/: 00_setup.py
src/bronze/ingest/: incremental_ingestion.py  ingestion_factory.py  nested_ingestion.py  simple_ingestion.py
src/bronze/monitoring/: bronze_metrics.py
src/bronze/orchestration/: dependency_manager.py  runner.py
src/config/: api_config.py  dataset_config.py  models.py  project_config.py  spark_config.py
src/gold/classification/autores/: dictionaries.py  functions.py
src/gold/classification/deputados/: functions.py
src/gold/classification/eventos/: functions.py
src/gold/classification/partidos/: dictionaries.py  functions.py
src/gold/classification/proposicoes/: dictionaries.py  functions.py  taxonomy.py
src/gold/classification/tramitacoes/: dictionaries.py  functions.py
src/gold/classification/votacoes/: functions.py
src/gold/classification/votos/: functions.py
src/gold/orchestration/: runner.py  teste_proposicoes.py
src/gold/registry/: registry.py
src/gold/transforms/: deputados.py  eventos.py  partidos.py  presencas.py  proposicoes.py  proposicoes_autores.py  tramitacoes.py  votacoes.py  votos.py
src/ml/: main.py  test_run.ipynb
src/ml/base/: preprocessing.py  regex.py  scoring.py
src/ml/config/: training_configs.py
src/ml/dictionaries/: natureza.py  taxonomia.py  temas.py
src/ml/features/: natureza.py  tema.py
src/ml/inference/: udf_loader.py
src/ml/orchestration/: training_runner.py
src/ml/training/: base_generator.py  labels.py  pipeline.py  registry.py  trainer.py
src/serving/: publish_tables.py
src/silver/: registry.py
src/silver/orchestration/: runner.py
src/silver/transforms/: deputados.py  eventos.py  partidos.py  presencas.py  proposicoes.py  proposicoes_autores.py  tramitacoes.py  votacoes.py  votos.py
src/star/dimensions/: dim_deputado.py  dim_evento.py  dim_orgao.py  dim_partido.py  dim_proposicao.py  dim_tempo.py
src/star/facts/: fato_autoria.py  fato_evento.py  fato_presenca.py  fato_proposicao.py  fato_tramitacao.py  fato_votacao.py  fato_voto.py
src/star/orchestration/: runner.py
src/star/registry/: dimensions.py  facts.py
src/teste/: conftest.py
src/teste/unit/: test_data_quality.py  test_ml_preprocessing.py  test_surrogate.py
src/tests/unit/: test_data_quality_checks.py
src/utils/api/: api_client.py
src/utils/helpers/: date_utils.py  schema_utils.py  spark_utils.py  surrogate.py
src/utils/monitoring/: data_quality.py  mlflow_registry.py  mlflow_tracking.py  pipeline_logger.py
src/utils/quality/: __init__.py  checks.py  contracts.py  report.py  runner.py
src/utils/storage/: delta_io.py  watermark_manager.py
tests/unit/: test_ml_regex.py  test_star_dimensions.py
