[project]
name = "dados-abertos-camara-lakehouse"
version = "0.1.0"
description = "Pipeline lakehouse de dados abertos da Câmara dos Deputados com PySpark, Delta Lake, arquitetura medalhão, NLP legislativo, MLflow, star schema e Power BI."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }

authors = [
    { name = "Nadinne Cavalcante", email = "cavalcantenadinne@yahoo.com" }
]

keywords = [
    "data-engineering",
    "pyspark",
    "delta-lake",
    "lakehouse",
    "medallion-architecture",
    "star-schema",
    "mlflow",
    "nlp",
    "power-bi",
    "dados-abertos",
    "camara-dos-deputados"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.9.0",
    "pyspark>=3.5.0",
    "delta-spark>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=14.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "ipykernel>=6.29.0"
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0"
]

[project.urls]
Repository = "https://github.com/nadinne94/projeto_api_dados_abertos_camara"
Source = "https://github.com/nadinne94/projeto_api_dados_abertos_camara/tree/main/src"
Issues = "https://github.com/nadinne94/projeto_api_dados_abertos_camara/issues"
API = "https://dadosabertos.camara.leg.br/swagger/api.html"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = [
    "tests*",
    "docs*",
    "notebooks*",
    "data*",
    "artifacts*"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]
python_classes = [
    "Test*"
]
python_functions = [
    "test_*"
]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = [
    "src"
]
omit = [
    "tests/*",
    "*/__init__.py",
    "src/**/test_*.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60

[tool.ruff]
target-version = "py310"
line-length = 88
src = [
    "src",
    "tests"
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info"
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "SIM",
    "C4",
    "PL"
]
ignore = [
    "E501",
    "PLR0913",
    "PLR0915",
    "PLR2004"
]

[tool.ruff.lint.isort]
known-first-party = [
    "src"
]
combine-as-imports = true

[tool.black]
line-length = 88
target-version = [
    "py310",
    "py311"
]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | .*\.egg-info
)/
'''

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
exclude = [
    "tests/",
    "build/",
    "dist/",
    ".*egg-info/"
]